# EmeraldChessEngine

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  build.py  config.json  enginetest_20_51_16.pgn  enginetest_21_03_31.pgn  log.md  testengine.py
src/: annotate.cpp  annotate.h  chess.hpp  eval.cpp  eval.h  evalconstants.h  history.h  incbin.h  main.cpp  moveorder.h  movepick.cpp  movepick.h  position.h  search.cpp  search.h  timecontrol.h  timemgr.cpp  timemgr.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h  ucioption.cpp  ucioption.h  weight.h  worker.cpp  worker.h
src/chesslib/: attacks.hpp  attacks_fwd.hpp  bitboard.hpp  board.hpp  board_fwd.hpp  color.hpp  constants.hpp  coords.hpp  include.hpp  move.hpp  movegen.hpp  movegen_fwd.hpp  pgn.hpp  piece.hpp  uci.hpp  utils.hpp  zobrist.hpp
